# interactive-clustering-gui

./: .copier-answers.yml  .gitignore  .pdm.toml  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  duties.py  gen_ref_nav.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  run.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
changelog/: index.html
code_of_conduct/: index.html
config/: coverage.ini  flake8.ini  pytest.ini
contributing/: index.html
coverage/: covindex.html  d_4324d12d9da04572___init___py.html  d_4324d12d9da04572_queries_py.html  d_4324d12d9da04572_settings_py.html  d_4324d12d9da04572_states_py.html  d_5e0ffa3275d40cc7___init___py.html  d_5e0ffa3275d40cc7_app_py.html  d_5e0ffa3275d40cc7_backgroundtasks_py.html  d_5e0ffa3275d40cc7_cli_py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_dummies_utils_py.html  d_a44f0ac069e85531_test_app_py.html  d_a44f0ac069e85531_test_backgroundtasks_py.html  d_a44f0ac069e85531_test_cli_py.html  d_a44f0ac069e85531_test_delete_api_projects_py.html  d_a44f0ac069e85531_test_get_alive_py.html  d_a44f0ac069e85531_test_get_api_projects_clustering_py.html  d_a44f0ac069e85531_test_get_api_projects_constraints_py.html  d_a44f0ac069e85531_test_get_api_projects_download_py.html  d_a44f0ac069e85531_test_get_api_projects_metadata_py.html  d_a44f0ac069e85531_test_get_api_projects_modelization_py.html  d_a44f0ac069e85531_test_get_api_projects_py.html  d_a44f0ac069e85531_test_get_api_projects_sampling_py.html  d_a44f0ac069e85531_test_get_api_projects_settings_py.html  d_a44f0ac069e85531_test_get_api_projects_status_py.html  d_a44f0ac069e85531_test_get_api_projects_texts_py.html  d_a44f0ac069e85531_test_get_api_projects_vectors_py.html  d_a44f0ac069e85531_test_get_gui_help_py.html  d_a44f0ac069e85531_test_get_gui_projects_constraints_annotation_py.html  d_a44f0ac069e85531_test_get_gui_projects_constraints_py.html  d_a44f0ac069e85531_test_get_gui_projects_home_py.html  d_a44f0ac069e85531_test_get_gui_projects_listing_py.html  d_a44f0ac069e85531_test_get_gui_projects_settings_py.html  d_a44f0ac069e85531_test_get_gui_projects_texts_py.html  d_a44f0ac069e85531_test_get_ready_py.html  d_a44f0ac069e85531_test_get_welcome_py.html  d_a44f0ac069e85531_test_post_api_projects_clustering_py.html  d_a44f0ac069e85531_test_post_api_projects_constraints_approve_py.html  d_a44f0ac069e85531_test_post_api_projects_iterations_py.html  d_a44f0ac069e85531_test_post_api_projects_modelization_py.html  (+23 more)
credits/: index.html
docs/: gen_ref_nav.py
docs/examples/: README.md
docs/figures/: figures.pptx  index.html
docs/notebooks/: README.md  analysis.ipynb  credentials.example.py
docs/notebooks/archive-demo-bank-cards-iter-max/: clustering.json  constraints.json  metadata.json  sampling.json  settings.json  status.json  texts.json  vectors_2D.json  vectors_3D.json
docs/notebooks/archive-demo-car-workshop-iter-07/: clustering.json  constraints.json  metadata.json  modelization.json  sampling.json  settings.json  status.json  texts.json  vectors_2D.json  vectors_3D.json
docs/notebooks/demo-project-data/: clustering.json  constraints.json  constraints_manager.pkl  metadata.json  modelization.json  sampling.json  settings.json  status.json  texts.json  vectors.pkl  vectors_2D.json  vectors_3D.json
docs/reference/: cli.md
examples/: index.html
figures/: index.html
license/: index.html
notebooks/: credentials.py  index.html
notebooks/analysis/: index.html
notebooks/archive-demo-bank-cards-iter-max/: clustering.json  constraints.json  metadata.json  sampling.json  settings.json  status.json  texts.json  vectors_2D.json  vectors_3D.json
notebooks/archive-demo-car-workshop-iter-07/: clustering.json  constraints.json  metadata.json  modelization.json  sampling.json  settings.json  status.json  texts.json  vectors_2D.json  vectors_3D.json
reference/SUMMARY/: index.html
reference/cli/: index.html
reference/cognitivefactory/interactive_clustering_gui/: index.html
scripts/: multirun.sh  setup.sh
search/: search_index.json
src/: 5646.json  Session1.json  session2.json
src/cognitivefactory/interactive_clustering_gui/: __init__.py  __main__.py  app.py  backgroundtasks.py  cli.py  fulltry (1).py  fulltry.py  hello.py
tests/: __init__.py  conftest.py  dummies_utils.py  test_app.py  test_backgroundtasks.py  test_cli.py  test_delete_api_projects.py  test_get_alive.py  test_get_api_projects.py  test_get_api_projects_clustering.py  test_get_api_projects_constraints.py  test_get_api_projects_download.py  test_get_api_projects_metadata.py  test_get_api_projects_modelization.py  test_get_api_projects_sampling.py  test_get_api_projects_settings.py  test_get_api_projects_status.py  test_get_api_projects_texts.py  test_get_api_projects_vectors.py  test_get_gui_help.py  test_get_gui_projects_constraints.py  test_get_gui_projects_constraints_annotation.py  test_get_gui_projects_home.py  test_get_gui_projects_listing.py  test_get_gui_projects_settings.py  test_get_gui_projects_texts.py  test_get_ready.py  test_get_welcome.py  test_hello.py  test_post_api_projects.py  test_post_api_projects_clustering.py  test_post_api_projects_constraints_approve.py  test_post_api_projects_iterations.py  test_post_api_projects_modelization.py  test_post_api_projects_sampling.py  test_put_api_projects.py  test_put_api_projects_constraints_annotate.py  test_put_api_projects_constraints_comment.py  test_put_api_projects_constraints_review.py  test_put_api_projects_settings.py  (+9 more)
tests/dummies/: dummy_24.csv  dummy_24.txt  dummy_24.xlsx  dummy_24_err.csv  dummy_24_err.xlsx
tests/dummies/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
tests/dummies/0a_INITIALIZATION_WITHOUT_MODELIZATION/: metadata.json  status.json
tests/dummies/0b_INITIALIZATION_WITH_PENDING_MODELIZATION/: metadata.json
tests/dummies/0d_CLUSTERING_TODO/: metadata.json  status.json
(+149 files in other folders)
