[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "cognitivefactory-interactive-clustering-gui"
description = "A web application designed for NLP data annotation using Interactive Clustering methodology."
authors = [
    {name = "Erwan Schild", email = "erwan.schild@e-i.com"}
]
license = {text = "CECILL-C"}
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "natural-language-processing",
    "constraints",
    "annotation-tool",
    "interactive-clustering",
    "constraints-annotation",
]
dynamic = [
    "version",
    "classifiers",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    #### "Programming Language :: Python :: 3.10",  # TODO: numpy==1.21.1 & scipy==1.6.1 & spacy not compatible...
    #### "Programming Language :: Python :: 3.11",  # TODO: numpy==1.21.1 & scipy==1.6.1 & spacy not compatible...
    #### "Programming Language :: Python :: 3.12",  # TODO:
    #### "Programming Language :: Python :: 3.13",  # TODO:
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    # Functionnal dependencies.
    "pandas>=1.1.4",
    "cognitivefactory-interactive-clustering>=1.0.0",
    "scikit-learn>=0.24.1",

    # Notebook analysis dependencies.
    # "jupyter>=1.0",
    # "jupyterthemes>=0.20",
    # "cognitivefactory-features-maximization-metric>=1.0",
    # "numpy>=1.14",
    # "openai>=1.14",
    # "pandas>=2.0",
    # "plotly>=2.5",

    # Technical dependencies.,
    "fastapi>=0.65.2",
    "filelock>=3.0.12",
    "jinja2>=3.0.1",
    "loguru>=0.5.3",
    "openpyxl>=3.0.7",
    #"pickle5>=0.0.12",
    "prometheus-fastapi-instrumentator>=5.5.1",
    "python-multipart>=0.0.5",
    "uvicorn>=0.12.2",
    "zipp>=3.5.0",

    # Safety dependencies.
    "setuptools>=65.5.1",  # TODO: Vulnerability https://pyup.io/v/52495/f17
]

[project.urls]
Homepage = "https://cognitivefactory.github.io/interactive-clustering-gui"
Documentation = "https://cognitivefactory.github.io/interactive-clustering-gui"
Changelog = "https://cognitivefactory.github.io/interactive-clustering-gui/changelog"
Repository = "https://github.com/cognitivefactory/interactive-clustering-gui"
Issues = "https://github.com/cognitivefactory/interactive-clustering-gui/issues"
Discussions = "https://github.com/cognitivefactory/interactive-clustering-gui/discussions"

[project.scripts]
cognitivefactory-interactive-clustering-gui = "cognitivefactory.interactive_clustering_gui.cli:main"

[tool.pdm]
includes = [
    "src/cognitivefactory",
]
version = {source = "scm"}

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"

[tool.pdm.dev-dependencies]
develop = [
    #"locust>=1.1",
    "fr-core-news-md @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_md-3.4.0/fr_core_news_md-3.4.0.tar.gz",  # ==3.4.0",

    # Fix dependencies.
    "urllib3>=1.26,<2",  # TODO: Project not compatible with urllib3>=2.0
]
duty = [
    "duty>=0.7",
]
format = [
    "autoflake>=1.4",
    "black>=21.10b0",
    "isort>=5.10",
]
quality = [
    # TODO: remove once importlib-metadata version conflict is resolved
    #### "importlib-metadata<5; python_version < '3.8'",
    #### "flake8>=4; python_version >= '3.8'",
    "flake8>=4",

    "darglint>=1.8",
    "flake8-bandit>=2.1",
    "flake8-black>=0.2",
    "flake8-bugbear>=21.9",
    "flake8-builtins>=1.5",
    "flake8-comprehensions>=3.7",
    "flake8-docstrings>=1.6",
    "flake8-pytest-style>=1.5",
    "flake8-string-format>=0.3",
    "flake8-tidy-imports>=4.5",
    "flake8-variables-names>=0.0",
    "pep8-naming>=0.12",
    "wps-light>=0.15",

    # Safety dependencies.
    "gitpython>=3.1.30",  # TODO: Vulnerability https://pyup.io/v/52322/f17/
]
docs = [
    "mkdocs>=1.3",
    "mkdocs-coverage>=0.2",
    "mkdocs-gen-files>=0.3",
    "mkdocs-jupyter>=0.24.3",  # TODO: fix error with "nbconvert==5.6.1", and some jupyter template location errors...
    "mkdocs-literate-nav>=0.4",
    "mkdocs-material>=7.3",
    "mkdocs-section-index>=0.3",
    "mkdocstrings[python]>=0.19",
    "markdown-callouts>=0.2",
    "markdown-exec>=0.5",
    "toml>=0.10",

    # Safety dependencies.
    "certifi>=2022.12.7",  # TODO: Vulnerability https://pyup.io/v/52365/f17/
]
typing = [
    "mypy>=0.910",
    "types-filelock",
    "types-markdown>=3.3",
    "types-python-dateutil",
    "types-toml>=0.10",

    # Fix dependencies.
    "typing-extensions<4.6",  # TODO: TypeError with spacy download https://github.com/explosion/spaCy/issues/12659
]
security = [
    "safety>=2",

    # Safety dependencies.
    "certifi>=2022.12.7",  # TODO: Vulnerability https://pyup.io/v/52365/f17/
]
tests = [
    #"asgi-lifespan>=1.0.1",  # To handle startup event.
    "httpx>=0.16",
    "hypothesis>=6.8",
    "pytest>=6.2",
    "pytest-asyncio>=0.14",
    "pytest-cov>=3.0",
    "pytest-mock>=3.4",  # To use monkeypatch.
    "pytest-randomly>=3.10",
    "pytest-sugar>=0.9",
    "pytest-xdist>=2.4",
    "fr-core-news-md @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_md-3.4.0/fr_core_news_md-3.4.0.tar.gz",  # ==3.4.0",
]
maintain = [
    "git-changelog>=0.4,<1.0",
]

[tool.black]
line-length = 120
exclude = "tests/fixtures"

[tool.isort]
line_length = 120
not_skip = "__init__.py"
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "cognitivefactory"
include_trailing_comma = true
